# llm-crypto-trader

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TRADING_STRATEGY.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  transcript.md
data/: active_positions.csv  ai_decisions.csv  bot_config.json  config_versions.json  market_snapshots.csv  portfolio_state.csv  trade_history.csv
frontend/: package-lock.json  package.json  test_dashboard.html
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: ConfigurationPanel.css  ConfigurationPanel.jsx  Dashboard.jsx  DashboardCMC.css  DashboardCMC.jsx  DashboardPro.jsx  DashboardPro.jsx.bak  MonitoringDashboard.css  MonitoringDashboard.jsx  TradingDashboard.css  TradingDashboard.jsx
src/: __init__.py  api.py  indicators.py  llm_client.py  market_data.py  position_manager.py  trading_bot.py
