[project]
name = "llm-crypto-trader"
version = "0.1.0"
description = "LLM-based crypto trading bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-binance>=1.0.0",
    "google-genai>=0.8.0",
    "python-dotenv>=1.0.0",
    "colorama>=0.4.0",
    "pathlib>=1.0.0",
    "pytz>=2023.0",
]
